Troca de imagens Slide png para webp

--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vidraçaria Kibox - Especialista em Vidro Temperado | Ribeirão Preto</title>
+    
     <!-- Otimização Slideshow -->
-    <link rel="preload" as="image" href="https://github.com/Betioli/Vidracaria-Kibox/blob/main/Imagens/Slide-1-compactadas.png?raw=true">
-    <link rel="preload" as="image" href="https://github.com/Betioli/Vidracaria-Kibox/blob/main/Imagens/Slide-2-compactadas.png?raw=true">  
-    <link rel="preload" as="image" href="https://github.com/Betioli/Vidracaria-Kibox/blob/main/Imagens/Slide-3-compactadas.png?raw=true">
+    <link rel="preload" as="image" href="https://github.com/Betioli/Vidracaria-Kibox/blob/main/Imagens/Slide-1-compactadas.webp?raw=true">
+    <link rel="preload" as="image" href="https://github.com/Betioli/Vidracaria-Kibox/blob/main/Imagens/Slide-2-compactadas.webp?raw=true">  
+    <link rel="preload" as="image" href="https://github.com/Betioli/Vidracaria-Kibox/blob/main/Imagens/Slide-3-compactadas.webp?raw=true">
 
     <!-- Fontes otimizadas -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -79,19 +80,19 @@
     <main>
         <!-- Hero Section -->
         <section class="hero" aria-label="Galeria de imagens da empresa">
-            <div class="slide active" style="background-image: url('https://github.com/Betioli/Vidracaria-Kibox/blob/main/Imagens/Slide-1-compactadas.png?raw=true');" role="img" aria-label="22 anos de experiência em vidraçaria">
+            <div class="slide active" style="background-image: url('https://github.com/Betioli/Vidracaria-Kibox/blob/main/Imagens/Slide-1-compactadas.webp?raw=true');" role="img" aria-label="22 anos de experiência em vidraçaria">
                 <div class="slide-content">
                     <h2>22 ANOS DE EXPERIÊNCIA</h2>
                     <p>Compromisso, Qualidade e Preço Justo!</p>
                 </div>
             </div>
-            <div class="slide" style="background-image: url('https://github.com/Betioli/Vidracaria-Kibox/blob/main/Imagens/Slide-2-compactadas.png?raw=true');" role="img" aria-label="Especialista em vidro temperado">
+            <div class="slide" style="background-image: url('https://github.com/Betioli/Vidracaria-Kibox/blob/main/Imagens/Slide-2-compactadas.webp?raw=true');" role="img" aria-label="Especialista em vidro temperado">
                 <div class="slide-content">
                     <h2>ESPECIALISTA EM VIDRO TEMPERADO</h2>
                     <p>Portas | Janelas | Vitrôs | Box | Espelhos | Sacada</p>
                 </div>
             </div>
-            <div class="slide" style="background-image: url('https://github.com/Betioli/Vidracaria-Kibox/blob/main/Imagens/Slide-3-compactadas.png?raw=true');" role="img" aria-label="Orçamento e execução em tempo recorde">
+            <div class="slide" style="background-image: url('https://github.com/Betioli/Vidracaria-Kibox/blob/main/Imagens/Slide-3-compactadas.webp?raw=true');" role="img" aria-label="Orçamento e execução em tempo recorde">
                 <div class="slide-content">
                     <h2>ORÇAMENTO E EXECUÇÃO EM TEMPO RECORDE</h2>
                     <p>Gratuito e sem Complicação</p>
