--- a/index.html
+++ b/index.html
@@ -182,20 +182,17 @@
     </footer>
     
     <script src="script.js"></script>
-    
-    <!-- SERVICE WORKER REGISTRATION -->
-    <script>
-    if ('serviceWorker' in navigator) {
-      window.addEventListener('load', function() {
-        navigator.serviceWorker.register('sw.js')
-          .then(function(registration) {
-            console.log('✅ Service Worker registrado com sucesso:', registration.scope);
-          })
-          .catch(function(error) {
-            console.log('❌ Falha no registro do Service Worker:', error);
-          });
-      });
-    }
-    </script>
+
+<script>
+if ('serviceWorker' in navigator) {
+  navigator.serviceWorker.register('sw.js')
+    .then(function(registration) {
+      console.log('✅ Service Worker registrado:', registration.scope);
+    })
+    .catch(function(error) {
+      console.log('❌ Falha no Service Worker:', error);
+    });
+}
+</script>
 </body>
 </html>
