--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="preload" as="image" href="https://github.com/Betioli/Vidracaria-Kibox/blob/main/Imagens/Slide-2-compactadas.webp?raw=true">  
     <link rel="preload" as="image" href="https://github.com/Betioli/Vidracaria-Kibox/blob/main/Imagens/Slide-3-compactadas.webp?raw=true">
 
-    <!-- Fontes otimizadas -->
+    <!-- Fontes otimizadas (ÚNICAS) -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Baskervville:wght@400;700&family=Montserrat:wght@400;500&display=swap" rel="stylesheet" media="print" onload="this.media='all'">
@@ -58,11 +58,6 @@
     j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
     })(window,document,'script','dataLayer','GTM-WHTX3875');</script>
-    
-    <!-- Fontes (iguais) -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Baskervville:wght@400;700&family=Cinzel:wght@400;700&family=Montserrat:wght@400;500&family=Red+Hat+Display:wght@400;500&display=swap" rel="stylesheet">
     
     <link rel="stylesheet" href="styles.css">
 </head>
