--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vidraçaria Kibox - Especialista em Vidro Temperado | Ribeirão Preto</title>
-    
+    <link rel="preload" href="script.js" as="script"> 
     <!-- CSS CRÍTICO INLINE - CONTEÚDO ACIMA DA DOBRA -->
     <style>
     /* HERO SECTION - CRÍTICO */
@@ -280,7 +280,7 @@
         </div>
     </footer>
     
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
 
 <script>
 if ('serviceWorker' in navigator) {
