Ajuste de imagens slide 2

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     /* HERO SECTION - CRÍTICO */
     .hero { 
         position: relative; 
-        height: 600px;
-        min-height: 80vh; 
-        overflow: hidden; 
+        height: 80vh;
+        overflow: hidden;
+        
     }
     .slide { 
         position: absolute; 
@@ -22,7 +22,6 @@
         transition: opacity 0.5s ease; 
         background-size: cover; 
         background-position: center;
-        aspect-ratio: 16 / 9;
     }
     .slide.active { 
         opacity: 1; 
@@ -74,7 +73,6 @@
         font-family: 'Montserrat', sans-serif;
     }
     .services-carousel-container {
-    height: 300px; /* ✅ ALTURA FIXA */
     overflow: hidden;
     }
     .services, .testimonials {
