Page speed: Swap em Header e fonts

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
         font-size: 1.2rem; 
         margin: 0; 
         font-family: 'Montserrat', sans-serif;
+        font-display: swap;
     }
     
     /* CTA SECTION - CRÍTICO */
@@ -101,7 +102,7 @@
     <!-- Fontes otimizadas (ÚNICAS) -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Baskervville:wght@400;700&family=Montserrat:wght@400;500&display=swap&display=swap" rel="stylesheet" media="print" onload="this.media='all'">
+    <link href="https://fonts.googleapis.com/css2?family=Baskervville:wght@400;700&family=Montserrat:wght@400;500&display=swap" rel="stylesheet" media="print" onload="this.media='all'">
     
     <!-- CSS COMPLETO ASSÍNCRONO -->
     <link rel="stylesheet" href="styles.css" media="print" onload="this.media='all'">
