--- a/index.html
+++ b/index.html
@@ -106,6 +106,11 @@
     <!-- Fontes otimizadas (ÚNICAS) -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet"> <!--Nova fonte-->
+    <link href="https://fonts.googleapis.com/css2?family=Baskervville:ital@0;1&display=swap" rel="stylesheet"> <!--Nova fonte-->
+    <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@400;500;700&display=swap" rel="stylesheet"> <!--Nova fonte-->
+    <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;500;600&display=swap" rel="stylesheet"> <!--Nova fonte-->
+
     <link href="https://fonts.googleapis.com/css2?family=Baskervville:wght@400;700&family=Montserrat:wght@400;500&display=optional" rel="stylesheet" media="print" onload="this.media='all'">
     
     <!-- CSS COMPLETO ASSÍNCRONO -->
