Ajuste de velocidade de fontes

--- a/index.html
+++ b/index.html
@@ -103,13 +103,14 @@
     <link rel="preload" as="image" href="https://github.com/Betioli/Vidracaria-Kibox/blob/main/Imagens/Slide-2-compactadas.webp?raw=true">  
     <link rel="preload" as="image" href="https://github.com/Betioli/Vidracaria-Kibox/blob/main/Imagens/Slide-3-compactadas.webp?raw=true">
 
-    <!-- Fontes otimizadas (ÚNICAS) -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet"> <!--Nova fonte-->
-    <link href="https://fonts.googleapis.com/css2?family=Baskervville:ital@0;1&display=swap" rel="stylesheet"> <!--Nova fonte-->
-    <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@400;500;700&display=swap" rel="stylesheet"> <!--Nova fonte-->
-    <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;500;600&display=swap" rel="stylesheet"> <!--Nova fonte-->
+    <!-- FONTES ULTRA-OTIMIZADAS -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="preload" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&family=Baskervville:ital@0;1&family=Red+Hat+Display:wght@400;500;700&family=Cinzel:wght@400;500;600&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
+  <noscript>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&family=Baskervville:ital@0;1&family=Red+Hat+Display:wght@400;500;700&family=Cinzel:wght@400;500;600&display=swap" rel="stylesheet">
+  </noscript>
+
 
     <!-- CSS COMPLETO ASSÍNCRONO -->
     <link rel="stylesheet" href="styles.css" media="print" onload="this.media='all'">
