Preload de fontes adcionado

--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vidraçaria Kibox - Especialista em Vidro Temperado | Ribeirão Preto</title>
-    <link rel="preload" href="script.js" as="script"> 
+    <link rel="preload" href="script.js" as="script">
+    <!-- NO HEAD DO HTML - APÓS O TÍTULO -->
+    <link rel="preload" href="/fonts/montserrat-regular.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="/fonts/montserrat-medium.woff2" as="font" type="font/woff2" crossorigin>
     <!-- CSS CRÍTICO INLINE - CONTEÚDO ACIMA DA DOBRA -->
     <style>
     /* HERO SECTION - CRÍTICO */
@@ -103,12 +106,7 @@
     <link rel="preload" as="image" href="https://github.com/Betioli/Vidracaria-Kibox/blob/main/Imagens/Slide-2-compactadas.webp?raw=true">  
     <link rel="preload" as="image" href="https://github.com/Betioli/Vidracaria-Kibox/blob/main/Imagens/Slide-3-compactadas.webp?raw=true">
 
-    <!-- GOOGLE FONTS ULTRA-OTIMIZADO -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&family=Baskervville:ital@0;1&family=Red+Hat+Display:wght@400;500;700&family=Cinzel:wght@400;500;600&display=swap">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&family=Baskervville:ital@0;1&family=Red+Hat+Display:wght@400;500;700&family=Cinzel:wght@400;500;600&display=swap" rel="stylesheet" media="print" onload="this.media='all'">
-
+    <!-- FONTS OTIMIZADAS -->
 
     <!-- CSS COMPLETO ASSÍNCRONO -->
     <link rel="stylesheet" href="styles.css" media="print" onload="this.media='all'">
