--- a/index.html
+++ b/index.html
@@ -213,7 +213,6 @@
       script.src = 'https://www.googletagmanager.com/gtm.js?id=GTM-WHTX3875';
       document.head.appendChild(script);
     }
-
     </script>
 </head>
 <body>
@@ -336,18 +335,19 @@
     <!-- SCRIPTS -->
     <script src="script.js" defer></script>
 
+    <!-- SERVICE WORKER REGISTRATION -->
     <script>
-if ('serviceWorker' in navigator) {
-  window.addEventListener('load', function() {
-    navigator.serviceWorker.register('sw.js')
-      .then(function(registration) {
-        console.log('✅ Service Worker registrado:', registration.scope);
-      })
-      .catch(function(error) {
-        console.log('❌ Falha no Service Worker:', error);
+    if ('serviceWorker' in navigator) {
+      window.addEventListener('load', function() {
+        navigator.serviceWorker.register('sw.js')
+          .then(function(registration) {
+            console.log('✅ Service Worker registrado:', registration.scope);
+          })
+          .catch(function(error) {
+            console.log('❌ Falha no Service Worker:', error);
+          });
       });
-  });
-}
-</script>
+    }
+    </script>
 </body>
 </html>
