--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
         
         <!-- CTA Section -->
         <section class="text-btn" aria-labelledby="cta-heading">
-            <p id="cta-heading"><strong>Atuamos exclusivamente no centro de <span class="no-break">Ribeirão Preto</span></strong><br><br> Para suprir o grande número de prédios e lojas comerciais, sabemos da necessidade e da rapidez tanto no orçamento quanto na execução do serviço.</p>
+            <p id="cta-heading"><strong><span class="espacamento-texto">Atuamos exclusivamente no centro de <span class="no-break">Ribeirão Preto</span></span></strong><br><br> Para suprir o grande número de prédios e lojas comerciais, sabemos da necessidade e da rapidez tanto no orçamento quanto na execução do serviço.</p>
             <a href="https://api.whatsapp.com/send/?phone=5516996197527&text&type=phone_number&app_absent=0" aria-label="Solicitar orçamento via WhatsApp">
                 <img src="/Imagens/icons8-whatsapp-48.png" alt="Ícone WhatsApp"> <!-- Ícone otimizado -->
                 <strong>Peça seu Orçamento</strong>
