--- a/index.html
+++ b/index.html
@@ -182,8 +182,8 @@
     <main>
         <!-- Hero Section -->
         <section class="hero" aria-label="Galeria de imagens da empresa">
-            <div class="slide active" style="background-image: url('/Imagens/Slide-1-compactadas.webp');" role="img" aria-label="22 anos de experiência em vidraçaria"> <!-- Imagem otimizada -->
-                <div class="slide-content">
+            <div class="slide active"> <img src="Imagens/Slide-1-compactadas.webp" alt="22 anos de experiência em vidraçaria" fetchpriority="high" loading="eager" class="image"> <!-- Imagem otimizada -->
+                <div class="slide-content"> <!-- otimizado para LCP -->
                     <h2>22 ANOS DE EXPERIÊNCIA</h2>
                     <p>Compromisso, Qualidade e Preço Justo!</p>
                 </div>
