Widh e height adicionados a icones e logo

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
     </noscript>
     
     <header role="banner">
-        <img src="/Imagens/Logo-da-empresa-somente-imagem.webp" alt="Logo da Vidraçaria Kibox" class="header-logo"> <!-- Logo otimizado -->
+        <img src="/Imagens/Logo-da-empresa-somente-imagem.webp" alt="Logo da Vidraçaria Kibox" class="header-logo" width="500" height="500"> <!-- Logo otimizado -->
         <h1>Vidraçaria Kibox Excelência em vidro</h1>
     </header>
     
@@ -215,7 +215,7 @@
         <section class="text-btn" aria-labelledby="cta-heading">
             <p id="cta-heading"><strong><span class="espacamento-texto">Atuamos exclusivamente no centro de <span class="no-break">Ribeirão Preto</span></span></strong><br><br> Para suprir o grande número de prédios e lojas comerciais, sabemos da necessidade e da rapidez tanto no orçamento quanto na execução do serviço.</p>
             <a href="https://api.whatsapp.com/send/?phone=5516996197527&text&type=phone_number&app_absent=0" aria-label="Solicitar orçamento via WhatsApp">
-                <img src="/Imagens/icons8-whatsapp-48.webp" alt="Ícone WhatsApp"> <!-- Ícone otimizado -->
+                <img src="/Imagens/icons8-whatsapp-48.webp" alt="Ícone WhatsApp"width=48 height="48"   > <!-- Ícone otimizado -->
                 <strong>Peça seu Orçamento</strong>
             </a>
         </section>
@@ -239,7 +239,7 @@
         <!-- Testimonials Section -->
         <section class="testimonials" aria-labelledby="testimonials-heading">
             <h2 id="testimonials-heading">
-                <img src="/Imagens/icons8-meu-neg%C3%B3cio-144.webp" alt="Google Meu Negócio" class="google-title-logo"> <!-- Logo otimizado -->
+                <img src="/Imagens/icons8-meu-neg%C3%B3cio-144.webp" alt="Google Meu Negócio" class="google-title-logo" width="144" height="144"> <!-- Logo otimizado -->
                 O que nossos clientes dizem?
             </h2>
             <div class="testimonials-carousel-container">
@@ -258,7 +258,7 @@
     <footer role="contentinfo">
         <div class="divider"></div>
         <div class="footer-grid">
-            <img src="/Imagens/Logo-da-empresa-512x512-Kibox.webp" alt="Logo Kibox Vidraçaria"> <!-- Logo otimizado -->
+            <img src="/Imagens/Logo-da-empresa-512x512-Kibox.webp" alt="Logo Kibox Vidraçaria" width="512" height="512"> <!-- Logo otimizado -->
             <div>
                 <h3>Onde estamos</h3>
                 <p>Endereço: Rua Campos Novos, Nº 400 - Alto do Ipiranga, Ribeirão Preto - SP CEP: 14055-440</p>
@@ -271,7 +271,7 @@
                 <h3>Contatos</h3>
                 <p>
                     <a href="https://www.instagram.com/kiboxvidros/" class="contact-link" aria-label="Siga-nos no Instagram">
-                        <img src="/Imagens/icons8-instagram-96.webp" alt="Ícone Instagram"> <!-- Ícone otimizado -->
+                        <img src="/Imagens/icons8-instagram-96.webp" alt="Ícone Instagram" width="96" height="96"> <!-- Ícone otimizado -->
                         Kiboxvidros
                     </a>
                 </p>
