Reajuste de img src em slides 1, 2 e 3

--- a/index.html
+++ b/index.html
@@ -182,19 +182,32 @@
     <main>
         <!-- Hero Section -->
         <section class="hero" aria-label="Galeria de imagens da empresa">
-            <div class="slide-img"> <img src="Imagens/Slide-1-compactadas.webp" alt="22 anos de experiência em vidraçaria" fetchpriority="high" loading="eager" class="image"> <!-- Imagem otimizada -->
+            <div class="slide-img"> 
+                <img src="Imagens/Slide-1-compactadas.webp" 
+                alt="22 anos de experiência em vidraçaria" 
+                fetchpriority="high" 
+                loading="eager" 
+                class="slide-img"> <!-- Imagem otimizada -->
                 <div class="slide-content"> <!-- otimizado para LCP -->
                     <h2>22 ANOS DE EXPERIÊNCIA</h2>
                     <p>Compromisso, Qualidade e Preço Justo!</p>
                 </div>
             </div>
-            <div class="slide" style="background-image: url('/Imagens/Slide-2-compactadas.webp');" role="img" aria-label="Especialista em vidro temperado"> <!-- Imagem otimizada -->
+            <div class="slide"> 
+                <img src="/Imagens/Slide-2-compactadas.webp" 
+                    alt="Especialista em vidro temperado"
+                    loading="lazy"
+                    class="slide-img"> <!-- Imagem otimizada -->
                 <div class="slide-content">
                     <h2>ESPECIALISTA EM VIDRO TEMPERADO</h2>
                     <p>Portas | Janelas | Vitrôs | Box | Espelhos | Divisória | Manutenções | Forro de PVC</p>
                 </div>
             </div>
-            <div class="slide" style="background-image: url('/Imagens/Slide-3-compactadas.webp');" role="img" aria-label="Orçamento e execução em tempo recorde"> <!-- Imagem otimizada -->
+            <div class="slide">
+            <img src="/Imagens/Slide-3-compactadas.webp'"
+                alt="Orçamento e execução em tempo recorde"
+                loading="lazy"
+                class="slide-img"> <!-- Imagem otimizada -->
                 <div class="slide-content">
                     <h2>ORÇAMENTO E EXECUÇÃO EM TEMPO RECORDE</h2>
                     <p>Gratuito e sem Complicação</p>
