--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
     <main>
         <!-- Hero Section -->
         <section class="hero" aria-label="Galeria de imagens da empresa">
-            <div class="slide-img"> 
+            <div class="slide active"> 
                 <img src="Imagens/Slide-1-compactadas.webp" 
                 alt="22 anos de experiência em vidraçaria" 
                 fetchpriority="high" 
@@ -204,7 +204,7 @@
                 </div>
             </div>
             <div class="slide">
-            <img src="/Imagens/Slide-3-compactadas.webp'"
+            <img src="/Imagens/Slide-3-compactadas.webp"
                 alt="Orçamento e execução em tempo recorde"
                 loading="lazy"
                 class="slide-img"> <!-- Imagem otimizada -->
