Html alterado decoding

--- a/index.html
+++ b/index.html
@@ -186,7 +186,8 @@
                 <img src="Imagens/Slide-1-compactadas.webp" 
                 alt="22 anos de experiência em vidraçaria" 
                 fetchpriority="high" 
-                loading="eager" 
+                loading="eager"
+                decoding="async" 
                 class="slide-img"> <!-- Imagem otimizada -->
                 <div class="slide-content"> <!-- otimizado para LCP -->
                     <h2>22 ANOS DE EXPERIÊNCIA</h2>
@@ -197,6 +198,7 @@
                 <img src="/Imagens/Slide-2-compactadas.webp" 
                     alt="Especialista em vidro temperado"
                     loading="lazy"
+                    decoding="async"
                     class="slide-img"> <!-- Imagem otimizada -->
                 <div class="slide-content">
                     <h2>ESPECIALISTA EM VIDRO TEMPERADO</h2>
@@ -207,6 +209,7 @@
             <img src="/Imagens/Slide-3-compactadas.webp"
                 alt="Orçamento e execução em tempo recorde"
                 loading="lazy"
+                decoding="async"
                 class="slide-img"> <!-- Imagem otimizada -->
                 <div class="slide-content">
                     <h2>ORÇAMENTO E EXECUÇÃO EM TEMPO RECORDE</h2>
