--- a/index.html
+++ b/index.html
@@ -183,7 +183,10 @@
         <!-- Hero Section -->
         <section class="hero" aria-label="Galeria de imagens da empresa">
             <div class="slide active"> 
-                <img src="Imagens/Slide-1-compactadas.webp" 
+                <img src="Imagens/Slide-1-compactadas-1200.webp"
+                srcset="Imagens/Slide-1-compactadas-400.webp 400w,
+                        Imagens/Slide-1-compactadas-800.webp 800w,
+                        Imagens/Slide-1-compactadas-1200.webp 1200w"
                 alt="22 anos de experiência em vidraçaria" 
                 fetchpriority="high" 
                 loading="eager"
@@ -195,7 +198,10 @@
                 </div>
             </div>
             <div class="slide"> 
-                <img src="/Imagens/Slide-2-compactadas.webp" 
+                <img src="/Imagens/Slide-2-compactadas-1200.webp"
+                srcset="Imagens/Slide-2-compactadas-400.webp 400w,
+                        Imagens/Slide-2-compactadas-800.webp 800w,
+                        Imagens/Slide-2-compactadas-1200.webp 1200w" 
                     alt="Especialista em vidro temperado"
                     loading="lazy"
                     decoding="async"
@@ -206,7 +212,10 @@
                 </div>
             </div>
             <div class="slide">
-            <img src="/Imagens/Slide-3-compactadas.webp"
+            <img src="/Imagens/Slide-3-compactadas-1200.webp"
+                srcset="Imagens/Slide-3-compactadas-400.webp 400w,
+                        Imagens/Slide-3-compactadas-800.webp 800w,
+                        Imagens/Slide-3-compactadas-1200.webp 1200w"
                 alt="Orçamento e execução em tempo recorde"
                 loading="lazy"
                 decoding="async"
