Caminhos de imagens alterados

--- a/index.html
+++ b/index.html
@@ -183,10 +183,10 @@
         <!-- Hero Section -->
         <section class="hero" aria-label="Galeria de imagens da empresa">
             <div class="slide active"> 
-                <img src="Imagens/Slide-1-compactadas-1200.webp"
-                srcset="Imagens/Slide-1-compactadas-400.webp 400w,
-                        Imagens/Slide-1-compactadas-800.webp 800w,
-                        Imagens/Slide-1-compactadas-1200.webp 1200w"
+                <img src="Imagens/Slide-1-compactadas.webp"
+                srcset="Imagens/Slide-1-compactadas.webp 400w,
+                        Imagens/Slide-1-compactadas.webp 800w,
+                        Imagens/Slide-1-compactadas.webp 1200w"
                 alt="22 anos de experiência em vidraçaria" 
                 fetchpriority="high" 
                 loading="eager"
@@ -198,10 +198,10 @@
                 </div>
             </div>
             <div class="slide"> 
-                <img src="/Imagens/Slide-2-compactadas-1200.webp"
-                srcset="Imagens/Slide-2-compactadas-400.webp 400w,
-                        Imagens/Slide-2-compactadas-800.webp 800w,
-                        Imagens/Slide-2-compactadas-1200.webp 1200w" 
+                <img src="/Imagens/Slide-2-compactadas.webp"
+                srcset="Imagens/Slide-2-compactadas.webp 400w,
+                        Imagens/Slide-2-compactadas.webp 800w,
+                        Imagens/Slide-2-compactadas.webp 1200w" 
                     alt="Especialista em vidro temperado"
                     loading="lazy"
                     decoding="async"
@@ -212,10 +212,10 @@
                 </div>
             </div>
             <div class="slide">
-            <img src="/Imagens/Slide-3-compactadas-1200.webp"
-                srcset="Imagens/Slide-3-compactadas-400.webp 400w,
-                        Imagens/Slide-3-compactadas-800.webp 800w,
-                        Imagens/Slide-3-compactadas-1200.webp 1200w"
+            <img src="/Imagens/Slide-3-compactadas.webp"
+                srcset="Imagens/Slide-3-compactadas.webp 400w,
+                        Imagens/Slide-3-compactadas.webp 800w,
+                        Imagens/Slide-3-compactadas.webp 1200w"
                 alt="Orçamento e execução em tempo recorde"
                 loading="lazy"
                 decoding="async"
@@ -240,7 +240,10 @@
         <section class="text-btn" aria-labelledby="cta-heading">
             <p id="cta-heading"><strong><span class="espacamento-texto">Atuamos exclusivamente no centro de <span class="no-break">Ribeirão Preto</span></span></strong><br><br> Para suprir o grande número de prédios e lojas comerciais, sabemos da necessidade e da rapidez tanto no orçamento quanto na execução do serviço.</p>
             <a href="https://api.whatsapp.com/send/?phone=5516996197527&text&type=phone_number&app_absent=0" aria-label="Solicitar orçamento via WhatsApp">
-                <img src="/Imagens/icons8-whatsapp-48.webp" alt="Ícone WhatsApp"width=48 height="48"   > <!-- Ícone otimizado -->
+                <img src="/Imagens/icons8-whatsapp-48.webp" 
+                alt="Ícone WhatsApp"
+                width=48 
+                height="48"   > <!-- Ícone otimizado -->
                 <strong>Peça seu Orçamento</strong>
             </a>
         </section>
@@ -264,7 +267,11 @@
         <!-- Testimonials Section -->
         <section class="testimonials" aria-labelledby="testimonials-heading">
             <h2 id="testimonials-heading">
-                <img src="/Imagens/icons8-meu-neg%C3%B3cio-144.webp" alt="Google Meu Negócio" class="google-title-logo" width="144" height="144"> <!-- Logo otimizado -->
+                <img src="/Imagens/icons8-meu-neg%C3%B3cio-144.webp"
+                alt="Google Meu Negócio" 
+                class="google-title-logo" 
+                width="144" 
+                height="144"> <!-- Logo otimizado -->
                 O que nossos clientes dizem?
             </h2>
             <div class="testimonials-carousel-container">
