--- a/index.html
+++ b/index.html
@@ -183,7 +183,10 @@
         <!-- Hero Section -->
         <section class="hero" aria-label="Galeria de imagens da empresa">
             <div class="slide active"> 
-                <img src="/Imagens/Slide-1-compactadas.webp"
+                <img src="/Imagens/Slide-1-compactadas-1200.webp"
+                srcset="/Imagens/Slide-1-compactadas-732.webp 732w,
+                        /Imagens/Slide-1-compactadas-1200.webp 1200w"
+                sizes="(max-width: 768px) 732px, 1200px"
                 alt="22 anos de experiência em vidraçaria" 
                 fetchpriority="high" 
                 loading="eager"
@@ -195,7 +198,10 @@
                 </div>
             </div>
             <div class="slide"> 
-                <img src="/Imagens/Slide-2-compactadas.webp" 
+                <img src="/Imagens/Slide-2-compactadas-1200.webp"
+                    srcset="/Imagens/Slide-2-compactadas-732.webp 732w,
+                            /Imagens/Slide-2-compactadas-1200.webp 1200w"
+                            sizes="(max-width: 768px) 732px, 1200px" 
                     alt="Especialista em vidro temperado"
                     loading="lazy"
                     decoding="async"
@@ -206,7 +212,10 @@
                 </div>
             </div>
             <div class="slide">
-            <img src="/Imagens/Slide-3-compactadas.webp"
+            <img src="/Imagens/Slide-3-compactadas-1200.webp"
+                srcset="/Imagens/Slide-3-compactadas-732.webp 732w,
+                        /Imagens/Slide-3-compactadas-1200.webp 1200w"
+                sizes="(max-width: 768px) 732px, 1200px"
                 alt="Orçamento e execução em tempo recorde"
                 loading="lazy"
                 decoding="async"
