Ajustando tamnaho das imagens, responsivo

--- a/index.html
+++ b/index.html
@@ -183,10 +183,10 @@
         <!-- Hero Section -->
         <section class="hero" aria-label="Galeria de imagens da empresa">
             <div class="slide active"> 
-                <img src="/Imagens/Slide-1-compactadas-1200.webp"
+                <img src="/Imagens/Slide-1-compactadas.webp"
                 srcset="/Imagens/Slide-1-compactadas-732.webp 732w,
-                        /Imagens/Slide-1-compactadas-1200.webp 1200w"
-                sizes="(max-width: 768px) 732px, 1200px"
+                        /Imagens/Slide-1-compactadas.webp 1200w"
+                sizes="100vw"
                 alt="22 anos de experiência em vidraçaria" 
                 fetchpriority="high" 
                 loading="eager"
@@ -198,10 +198,10 @@
                 </div>
             </div>
             <div class="slide"> 
-                <img src="/Imagens/Slide-2-compactadas-1200.webp"
+                <img src="/Imagens/Slide-2-compactadas.webp"
                     srcset="/Imagens/Slide-2-compactadas-732.webp 732w,
-                            /Imagens/Slide-2-compactadas-1200.webp 1200w"
-                            sizes="(max-width: 768px) 732px, 1200px" 
+                            /Imagens/Slide-2-compactadas.webp 1200w"
+                            sizes="100vw" 
                     alt="Especialista em vidro temperado"
                     loading="lazy"
                     decoding="async"
@@ -212,10 +212,10 @@
                 </div>
             </div>
             <div class="slide">
-            <img src="/Imagens/Slide-3-compactadas-1200.webp"
+            <img src="/Imagens/Slide-3-compactadas.webp"
                 srcset="/Imagens/Slide-3-compactadas-732.webp 732w,
-                        /Imagens/Slide-3-compactadas-1200.webp 1200w"
-                sizes="(max-width: 768px) 732px, 1200px"
+                        /Imagens/Slide-3-compactadas.webp 1200w"
+                sizes="100vw"
                 alt="Orçamento e execução em tempo recorde"
                 loading="lazy"
                 decoding="async"
