--- a/index.html
+++ b/index.html
@@ -187,6 +187,8 @@
                 srcset="/Imagens/Slide-1-compactadas-732.webp 732w,
                         /Imagens/Slide-1-compactadas.webp 1200w"
                 sizes="100vw"
+                width="1200" 
+                height="675"
                 alt="22 anos de experiência em vidraçaria" 
                 fetchpriority="high" 
                 loading="eager"
@@ -201,7 +203,9 @@
                 <img src="/Imagens/Slide-2-compactadas.webp"
                     srcset="/Imagens/Slide-2-compactadas-732.webp 732w,
                             /Imagens/Slide-2-compactadas.webp 1200w"
-                            sizes="100vw" 
+                    sizes="100vw"
+                    width="1200" 
+                    height="675" 
                     alt="Especialista em vidro temperado"
                     loading="lazy"
                     decoding="async"
@@ -216,6 +220,8 @@
                 srcset="/Imagens/Slide-3-compactadas-732.webp 732w,
                         /Imagens/Slide-3-compactadas.webp 1200w"
                 sizes="100vw"
+                width="1200" 
+                height="675"
                 alt="Orçamento e execução em tempo recorde"
                 loading="lazy"
                 decoding="async"
