Teste de Reflow, Java e css alterado

--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
         <!-- Testimonials Section -->
         <section class="testimonials" aria-labelledby="testimonials-heading">
             <h2 id="testimonials-heading">
-                <img src="/Imagens/icons8-meu-neg%C3%B3cio-144.webp"
+                <img src="/Imagens/icons8-google-meu-negocio-144.webp"
                 alt="Google Meu Negócio" 
                 class="google-title-logo" 
                 width="144" 
