--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
     <!-- FONTS OTIMIZADAS -->
 
     <!-- CSS COMPLETO ASSÍNCRONO -->
-    <link rel="stylesheet" href="styles.css" media="print" onload="this.media='all'">
+    <link rel="stylesheet" href="styles.css?v=2.1"  onload="this.media='all'">
     
     <!-- META DESCRIPTION ORIGINAL (PERFEITA) -->
     <meta name="description" content="Vidraçaria Kibox: 22 anos de experiência em vidro temperado. Divisória, Box, Espelho, Guarda Corpo. Orçamento rápido em Ribeirão Preto-SP.">
@@ -166,6 +166,7 @@
       script.src = 'https://www.googletagmanager.com/gtm.js?id=GTM-WHTX3875';
       document.head.appendChild(script);
     }
+
     </script>
 </head>
 <body>
@@ -321,7 +322,7 @@
         </div>
     </footer>
     
-    <script src="script.js" defer></script>
+    <script src="script.js?v=2.1" defer></script>
 
 <script>
 if ('serviceWorker' in navigator) {
