--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vidraçaria Kibox - Especialista em Vidro Temperado | Ribeirão Preto</title>
+    <meta name="google-site-verification" content="google0c0fc43cf70367b5.html">
     <link rel="preload" href="script.js" as="script">
     <!-- NO HEAD DO HTML - APÓS O TÍTULO -->
     <link rel="preload" href="/fonts/montserrat-regular.woff2" as="font" type="font/woff2" crossorigin>
