--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Vidraçaria Kibox - Especialista em Vidro Temperado | Ribeirão Preto</title>
     <link rel="preload" href="script.js" as="script">
     <!-- NO HEAD DO HTML - APÓS O TÍTULO -->
-    <link rel="preload" href="/fonts/montserrat-regular.woff2" as="font" type="font/woff2" crossorigin>
-    <link rel="preload" href="/fonts/montserrat-medium.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="/fonts/montserrat-regular.woff2?v=2.5" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="/fonts/montserrat-medium.woff2?v=2.5" as="font" type="font/woff2" crossorigin>
     <!-- CSS CRÍTICO INLINE - CONTEÚDO ACIMA DA DOBRA -->
     <style>
     /* HERO SECTION - CRÍTICO */
@@ -109,7 +109,7 @@
     <!-- FONTS OTIMIZADAS -->
 
     <!-- CSS COMPLETO ASSÍNCRONO -->
-    <link rel="stylesheet" href="styles.css?v=2.3"  onload="this.media='all'">
+    <link rel="stylesheet" href="styles.css?v=2.5"  onload="this.media='all'">
     
     <!-- META DESCRIPTION ORIGINAL (PERFEITA) -->
     <meta name="description" content="Vidraçaria Kibox: 22 anos de experiência em vidro temperado. Divisória, Box, Espelho, Guarda Corpo. Orçamento rápido em Ribeirão Preto-SP.">
@@ -322,7 +322,7 @@
         </div>
     </footer>
     
-    <script src="script.js?v=2.3" defer></script>
+    <script src="script.js?v=2.5" defer></script>
 
 <script>
 if ('serviceWorker' in navigator) {
