--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vidraçaria Kibox - Especialista em Vidro Temperado | Ribeirão Preto</title>
-    <link rel="preload" href="script.js" as="script">
+    <link rel="preload" href="script.js?v=2.5" as="script">
     <!-- NO HEAD DO HTML - APÓS O TÍTULO -->
     <link rel="preload" href="/fonts/montserrat-regular.woff2?v=2.5" as="font" type="font/woff2" crossorigin>
     <link rel="preload" href="/fonts/montserrat-medium.woff2?v=2.5" as="font" type="font/woff2" crossorigin>
