--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
         <!-- CTA Section -->
         <section class="text-btn" aria-labelledby="cta-heading">
             <p id="cta-heading"><strong><span class="espacamento-texto">Atuamos exclusivamente no centro de <span class="no-break">Ribeirão Preto</span></span></strong><br><br> Para suprir o grande número de prédios e lojas comerciais, sabemos da necessidade e da rapidez tanto no orçamento quanto na execução do serviço.</p>
-            <a href="https://api.whatsapp.com/send/?phone=5516996197527&text=Ol%C3%A1,%20vim%20pelo%20site%20e%20gostaria%20de%20um%20or%C3%A7amento%20por%20favor." aria-label="Solicitar orçamento via WhatsApp">
+            <a href="https://api.whatsapp.com/send/?phone=5516996197527&text&type=phone_number&app_absent=0" aria-label="Solicitar orçamento via WhatsApp">
                 <img src="/Imagens/icons8-whatsapp-48.webp" 
                 alt="Ícone WhatsApp"
                 width=48 
