--- a/index.html
+++ b/index.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vidraçaria Kibox - Especialista em Vidro Temperado | Ribeirão Preto</title>
-    
-    <!-- NO HEAD DO HTML - APÓS O TÍTULO -->
+
+    <link rel="preload" href="/styles.css?v=2.6" as="style" onload="this.onload=null;this.rel='stylesheet'">
     <link rel="preload" href="/fonts/Montserrat-regular.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="/fonts/Montserrat-medium.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="/fonts/Montserrat-bold.woff2" as="font" type="font/woff2" crossorigin>
+    <noscript><link rel="stylesheet" href="/styles.css?v=2.6"></noscript>
+
     
     <!-- CSS CRÍTICO INLINE - CONTEÚDO ACIMA DA DOBRA -->
     <style>
