--- a/index.html
+++ b/index.html
@@ -154,24 +154,15 @@
 
     <!-- Google Tag Manager OTIMIZADO -->
     <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
+    window.addEventListener('load', function() {
+    (function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-WHTX3875');
+});
+</script>
 
-    // Carrega GTM DEPOIS que a página estiver pronta
-    if (document.readyState === 'loading') {
-      document.addEventListener('DOMContentLoaded', loadGTM);
-    } else {
-      loadGTM();
-    }
-
-    function loadGTM() {
-      var script = document.createElement('script');
-      script.async = true;
-      script.src = 'https://www.googletagmanager.com/gtm.js?id=GTM-WHTX3875';
-      document.head.appendChild(script);
-    }
-
-    </script>
 </head>
 <body>
     <!-- Google Tag Manager (noscript) -->
