--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <title>Vidraçaria Kibox - Especialista em Vidro Temperado | Ribeirão Preto</title>
 
     <link rel="preload" href="/styles.css?v=2.6" as="style" onload="this.onload=null;this.rel='stylesheet'">
-    <link rel="preload" href="/fonts/Montserrat-regular.woff2" as="font" type="font/woff2" crossorigin>
-    <link rel="preload" href="/fonts/Montserrat-medium.woff2" as="font" type="font/woff2" crossorigin>
-    <link rel="preload" href="/fonts/Montserrat-bold.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="/fonts/Montserrat-Regular.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="/fonts/Montserrat-Medium.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="/fonts/Montserrat-Bold.woff2" as="font" type="font/woff2" crossorigin>
     <noscript><link rel="stylesheet" href="/styles.css?v=2.6"></noscript>
 
     
