Adicionado <META HTTP equiv> (CSP Whatsapp)index.html

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="Content-Security-Policy" content="script-src 'self' https://www.googletagmanager.com https://www.googleadservices.com; connect-src 'self' https://www.google-analytics.com https://www.google.com https://www.googleadservices.com;">
     <title>Vidraçaria Kibox - Especialista em Vidro Temperado | Ribeirão Preto</title>
 
     <link rel="preload" href="/styles.css?v=2.6" as="style" onload="this.onload=null;this.rel='stylesheet'">
@@ -117,8 +118,6 @@
     
     <!-- META DESCRIPTION ORIGINAL (PERFEITA) -->
     <meta name="description" content="Vidraçaria Kibox: 22 anos de experiência em vidro temperado. Divisória, Box, Espelho, Guarda Corpo. Orçamento rápido em Ribeirão Preto-SP.">
-    <meta name="description" content="Vidraçaria Kibox: 22 anos de experiência em vidro temperado. Ribeirão Preto, Manutenção rápida, Box, Espelho, Guarda Corpo e Divisórias de Eucatex e vidro temperado. Atendimento prioritário no centro.">
-    
     <meta name="keywords" content="vidraçaria ribeirão preto, vidro temperado ribeirão preto, box de vidro, manutenção vidraçaria, conserto box vidro, espelho sob medida, guarda corpo vidro, divisória vidro, forro pvc, vidraçaria centro ribeirão preto, troca de roldana box, fechadura box vidro">
     <meta name="author" content="Vidraçaria Kibox">
 
