Adicionado CSP 2.2 chat gpt index.html

--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="Content-Security-Policy" content="
-    default-src 'self'; 
-    script-src 'self' 'unsafe-inline' https://www.googletagmanager.com https://www.googleadservices.com https://www.google-analytics.com https://www.google.com; 
-    connect-src 'self' https://www.googletagmanager.com https://www.googleadservices.com https://www.google-analytics.com https://www.google.com https://googleads.g.doubleclick.net; 
-    img-src 'self' data: https://www.googletagmanager.com https://www.googleadservices.com https://www.google-analytics.com https://www.google.com; 
-    style-src 'self' 'unsafe-inline'; 
-    font-src 'self' data:;">
+default-src 'self';
+script-src 'self' 'unsafe-inline' 'unsafe-eval' https://www.googletagmanager.com https://www.google-analytics.com https://www.googleadservices.com https://tagmanager.google.com;
+connect-src 'self' https://www.google-analytics.com https://www.googletagmanager.com https://www.googleadservices.com https://googleads.g.doubleclick.net;
+img-src 'self' data: https://www.google-analytics.com https://www.googletagmanager.com https://www.googleadservices.com https://www.google.com;
+style-src 'self' 'unsafe-inline';
+font-src 'self' data:;">
+
     <title>Vidraçaria Kibox - Especialista em Vidro Temperado | Ribeirão Preto</title>
 
     <link rel="preload" href="/styles.css?v=2.6" as="style" onload="this.onload=null;this.rel='stylesheet'">
