--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="Content-Security-Policy" content="
-  default-src 'self' data: https: blob:;
-  script-src 'self' 'unsafe-inline' 'unsafe-eval' https://www.googletagmanager.com https://www.googleadservices.com https://www.google-analytics.com https://www.google.com https://googleads.g.doubleclick.net;
-  connect-src 'self' https://www.googletagmanager.com https://www.googleadservices.com https://www.google-analytics.com https://www.google.com https://googleads.g.doubleclick.net;
-  img-src 'self' data: https://www.googletagmanager.com https://www.googleadservices.com https://www.google-analytics.com https://www.google.com https://googleads.g.doubleclick.net;
-  style-src 'self' 'unsafe-inline';
-  font-src 'self' data:;
+    default-src 'self' data: https: blob:; 
+    script-src 'self' 'unsafe-inline' 'unsafe-eval' https://www.googletagmanager.com https://www.googleadservices.com https://www.google-analytics.com https://www.google.com https://adservice.google.com; 
+    connect-src 'self' https://www.googletagmanager.com https://www.googleadservices.com https://www.google-analytics.com https://www.google.com https://googleads.g.doubleclick.net https://adservice.google.com; 
+    img-src 'self' data: https://www.googletagmanager.com https://www.googleadservices.com https://www.google-analytics.com https://www.google.com https://googleads.g.doubleclick.net https://adservice.google.com; 
+    style-src 'self' 'unsafe-inline'; 
+    font-src 'self' data:;
 ">
 
     <title>Vidraçaria Kibox - Especialista em Vidro Temperado | Ribeirão Preto</title>
