Politica de privacidade criado

--- a/index.html
+++ b/index.html
@@ -313,6 +313,7 @@
         </div>
         <div class="footer-bottom">
             <p class="footer-item">2025© Vidraçaria KIBOX | Todos os direitos reservados</p>
+            <p class="footer-item politica de privacidade"><a href="politica-de-privacidade.html" target="_blank">Política de Privacidade</a></p>
             <p class="footer-item footer-dev"><a href="https://www.instagram.com/bms_trafego/">Desenvolvido por @bms_trafego</a></p>
         </div>
     </footer>
